--- a/home.css
+++ b/home.css
@@ -212,7 +212,8 @@
 }
 @media screen and (max-width: 800px) {
     .main-content .experience .work-experience {
-        margin:0%4%; 
+        margin:0%4%;
+        padding-right:5px;
     }
 
     .main-content .content .name-email
