--- a/home.css
+++ b/home.css
@@ -224,12 +224,25 @@
     {
         margin: 0%10%;
     }
-        .header .links
+     .header .links
     {
         float:right;
         margin: 3%0%;
         padding-right: 2px;
         padding-left: 2px;   
+        font-size: normal;
+    }
+    .header .dropdown
+    {
+        float: right;
+        overflow: hidden;
+        background-color: #5c5cd6;
+        color:white;
+        margin: 3%0%;
+        padding:0%1%;
+    }
+    .header .dropdown h3
+    {
         font-size: normal;
     }
   }
