--- a/home.css
+++ b/home.css
@@ -230,19 +230,15 @@
         margin: 3%0%;
         padding-right: 2px;
         padding-left: 4px;   
-        font-size: normal;
+        font-size: small;
     }
     .header .dropdown
     {
-        float: right;
-        overflow: hidden;
-        background-color: #5c5cd6;
-        color:white;
         margin: 3%0%;
-        padding:0%1%;
+        padding:0%0%;
     }
     .header .dropdown h3
     {
-        font-size: normal;
+        font-size: small;
     }
   }
