--- a/home.css
+++ b/home.css
@@ -212,8 +212,9 @@
 }
 @media screen and (max-width: 800px) {
     .main-content .experience .work-experience {
-        margin:0%4%;
-        padding-right:10px;
+        margin:0%3
+        padding:0%5x;
+        
     }
 
     .main-content .content .name-email
