--- a/home.css
+++ b/home.css
@@ -212,8 +212,8 @@
 }
 @media screen and (max-width: 800px) {
     .main-content .experience .work-experience {
-        margin:0%3
-        padding:0%5x;
+        margin:0%3%;
+        padding:0%2px;
         
     }
 
