--- a/home.css
+++ b/home.css
@@ -213,7 +213,7 @@
 @media screen and (max-width: 800px) {
     .main-content .experience .work-experience {
         margin:0%3%;
-        padding:0%2px;
+        padding:3px 2px;
         
     }
 
