--- a/home.css
+++ b/home.css
@@ -242,4 +242,9 @@
     {
         font-size: small;
     }
+    .main-content .content .name-email
+    {
+        font-size: small;  
+    }
+    
   }
