--- a/home.css
+++ b/home.css
@@ -54,6 +54,11 @@
     font-family: inherit;
     margin: 0;
 }
+.header .links .active
+{
+    background-color: #7575a3;
+    padding:2px 2px;
+}
 .main-content .otherinfo
 {   display:block;
     margin:-30px 16%;
