--- a/education.css
+++ b/education.css
@@ -82,7 +82,11 @@
 {
     color:white;
 }
-
+.header .links .active
+{
+    background-color: #7575a3;
+    padding:2px 2px;
+}
 .main-content
 {
     background-color: #0080ff;
